# zero

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
core/: core_defines.hpp  core_event.hpp
core/driver/audio/: audio.cpp  audio.hpp  audio_defines.hpp  audio_melody.cpp  audio_melody.hpp  audio_proto.hpp  audio_pwm.cpp  audio_pwm.hpp  audio_serie.hpp  audio_variant.hpp
core/driver/i2c/: i2c_master.cpp  i2c_master.hpp  i2c_master_proto.hpp  i2c_master_serie.hpp  i2c_master_variant.hpp  i2c_slave.cpp  i2c_slave.hpp  i2c_slave_proto.hpp  i2c_slave_serie.hpp  i2c_slave_variant.hpp
core/driver/i2c/default_bank/: i2c_memory_default_bank.cpp  i2c_memory_default_bank.hpp  i2c_memory_register_bla.hpp  i2c_memory_register_blub.hpp  i2c_memory_register_identifier.hpp  i2c_memory_register_serial.hpp
core/driver/i2c/memory/: i2c_memory_bank.hpp  i2c_memory_interface.hpp  i2c_memory_register.cpp  i2c_memory_register.hpp
core/driver/soc/: rp2040_soc_proto.hpp  rp2040_soc_serie.hpp  soc_variant.hpp
core/driver/soc/rp2040/: rp2040_gpio.cpp  rp2040_gpio.hpp  rp2040_pwm.cpp  rp2040_pwm.hpp  rp2040_soc.cpp  rp2040_soc.hpp  rp2040_stopwatch.cpp  rp2040_stopwatch.hpp  rp2040_temperature.cpp  rp2040_temperature.hpp  rp2040_ticker.cpp  rp2040_ticker.hpp  rp2040_watchdog.cpp  rp2040_watchdog.hpp
core/driver/temperature/: core_temperature.cpp  core_temperature.hpp
core/driver/uart/: uart_buffer.hpp  uart_empty.hpp  uart_first_proto.hpp  uart_first_serie.hpp  uart_handler.hpp  uart_instance.hpp  uart_second_proto.hpp  uart_second_serie.hpp  uart_variant.hpp
core/driver/usb/: tusb_config.h  usb_descriptors.hpp  usb_descriptors_cdc.cpp  usb_descriptors_hid.cpp  usb_device.cpp  usb_device.hpp
core/driver/visual/: inolux5050.cpp  inolux5050.hpp  neopixel.pio  neopixel_interface.hpp  neopixel_variant.hpp  visual.cpp  visual.hpp  visual_color.hpp  visual_color_defines.hpp  visual_executor.cpp  visual_executor.hpp  visual_executor_interface.hpp  visual_proto.hpp  visual_proto_inolux.hpp  visual_serie.hpp  visual_smart_led.hpp  visual_variant.hpp  ws2812.cpp  ws2812.hpp
core/driver/visual/program/: visual_prog_active.cpp  visual_prog_active.hpp  visual_prog_alert.cpp  visual_prog_alert.hpp  visual_prog_freeze.cpp  visual_prog_freeze.hpp  visual_prog_identifier.hpp  visual_prog_idle.cpp  visual_prog_idle.hpp  visual_prog_off.cpp  visual_prog_off.hpp  visual_prog_ready.cpp  visual_prog_ready.hpp  visual_prog_service.cpp  visual_prog_service.hpp
core/service/: random_sequence.cpp  random_sequence.hpp  reboot_watcher.cpp  reboot_watcher.hpp
pulp/: pulp_defines.hpp  pulp_defines_proto.hpp  pulp_defines_serie.hpp  pulp_variant.hpp
pulp/api/: active_component_interface.hpp  audio_interface.hpp  component_interface.hpp  component_state.hpp  device_validator_interface.hpp  temperature_interface.hpp  ticker_interface.hpp  timestamp_interface.hpp  visual_interface.hpp
pulp/identity/: identity.hpp  identity_proto.hpp  identity_serie.hpp  identity_settings.hpp  identity_variant.hpp
pulp/parameter/: param_address.cpp  param_address.hpp  param_audio.cpp  param_audio.hpp  param_charger.cpp  param_charger.hpp  param_features.cpp  param_features.hpp  param_load.cpp  param_load.hpp  param_maintainer.cpp  param_maintainer.hpp  param_name.cpp  param_name.hpp  param_position.cpp  param_position.hpp  param_serial_number.cpp  param_serial_number.hpp  param_unique_identifier.cpp  param_unique_identifier.hpp  param_user.cpp  param_user.hpp  param_visual.cpp  param_visual.hpp  parameter_identifier.cpp  parameter_identifier.hpp  parameter_proto.hpp  parameter_serie.hpp  parameter_variant.hpp
pulp/registry/: parameter.cpp  parameter.hpp  registry.cpp  registry.hpp  registry_access.cpp  registry_access.hpp  registry_access_interface.hpp  registry_defines.hpp  registry_notification.hpp
pulp/scheduler/: event_bus.hpp  event_scheduler.hpp  pulp_event.hpp
pulp/utilities/: array_length.hpp  bytering.cpp  bytering.hpp  checksum.cpp  checksum.hpp  chunk.h  instance_array.hpp  macros.cpp  macros.hpp
